# Projects

./: test.c
Complex/: Makefile  complex.cpp  complex.h  complex_test.cpp
Forwardlist/: Makefile  forwardlist.cpp  forwardlist.h  test.cpp
Rational/: Makefile  rational.cpp  rational.h  rational_test.cpp
codeforces/: .clang-format  round144a.cpp  round144a.md
list/: Makefile  arraylist.cpp  arraylist.h  list.cpp  list.h  test.cpp
s21_decimal/src/: Makefile  s21_decimal.c  s21_decimal.h  s21_decimal_tests.h  test.c
s21_math/src/: Makefile  s21_math.h
s21_math/src/source/: s21_acos.c  s21_asin.c  s21_atan.c  s21_ceil.c  s21_cos.c  s21_exp.c  s21_fabs.c  s21_floor.c  s21_fmod.c  s21_log.c  s21_pow.c  s21_sin.c  s21_sqrt.c  s21_tan.c  signbit.c  signbit.h
s21_math/src/test/: s21_test_ceil.c  s21_test_cos.c  s21_test_exp.c  s21_test_floor.c  (+5 more)
s21_matrix/src/: Makefile  s21_matrix.c  s21_matrix.h  s21_matrix_test.c
s21_smart_calc/src/: Instruction.html  Makefile  s21_calculator.h  s21_lexems_to_res.c  s21_list.c  s21_polish_notation.c  s21_stack.c  s21_validation.c
s21_string+/src/: Makefile  s21_string.h  s21_test.c  s21_test.h
stack/: Makefile  stack.cpp  stack.h  test.cpp
stepik/graphs/: link.md
stepik/sportprogramming/: 1.cpp  2.cpp  a.out
tetr.io/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  tetr.io
yacontest/binsearch/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.py  g.cpp  h.cpp  link.md
yacontest/modulearithmetic/: a.py  b.cpp  d.cpp  e.cpp  link.md
yacontest/rmqrsq/: a.cpp  d.cpp  f.cpp  i.cpp  j.cpp  link.md
(+74 files in other folders)
